--- a/src/Pages/Filmography.module.css
+++ b/src/Pages/Filmography.module.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     background-color: #212020;
     color: #ffffff; 
     font-family: Arial, sans-serif;
@@ -68,35 +68,20 @@ body {
     color: #ffffff;
 }
 
-.user_container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+.movie-component{
+    display: inline-block;
+    text-align: center;
+    padding-right: 15px;
 }
 
-.user{
-    overflow: hidden;
-    height: 170px;
-    background-color: #464545;
-    border: none;
-    border-radius: 5px;
-    margin: 10px;
+#movie-poster{
+    height: 200px;
 }
 
-img#profile{
-    float: left;
-    width: 130px;
-    margin: 20px;
-    border-radius: 50%;
-}
-
-.user_information{
-    float: left;
-    overflow: hidden;
+#movie-title{
     width: 150px;
-    height: 130px;
-    margin: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
-
-.user_information h3{
-    line-height: 2;
-}
+*/
