--- a/src/Pages/Community.module.css
+++ b/src/Pages/Community.module.css
@@ -67,6 +67,7 @@
     border: none;
     border-radius: 5px;
     margin: 10px;
+    display: flex; 
 }
 
 .user img{
@@ -74,16 +75,50 @@
     width: 130px;
     margin: 20px;
     border-radius: 50%;
+    
 }
 
 .userInformation{
-    float: left;
+    float: right;
     overflow: hidden;
     width: 150px;
     height: 130px;
     margin: 20px;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-around; 
 }
 
 .userInformation h3{
     line-height: 2;
+    color: #ffffff;
+}
+.communityBody h2{
+    color: #ffffff;
+}
+
+.notice {
+    color: #464545;
+    font-size: 20px;
+}
+
+.communityBody::-webkit-scrollbar {
+	width: 10px;  /*스크롤바 너비 */
+    height: 10px;
+}
+
+/* 스크롤바 막대 꾸미기 */
+.communityBody::-webkit-scrollbar-thumb {
+    height: 30%; /*스크롤바 길이 */
+    background: #b1adad; /*스크롤바 색상*/
+    border-radius: 10px;
+}
+
+/* 스크롤바 트랙 꾸미기 */
+.communityBody::-webkit-scrollbar-track {
+	background: #212020;
+}
+
+.communityBody::-webkit-scrollbar-corner {
+	background: #212020;
 }
