--- a/src/Pages/Genre.module.css
+++ b/src/Pages/Genre.module.css
@@ -1,87 +1,108 @@
-/*body {
+.genreBody {
     background-color: #212020;
-    color: #ffffff; 
-    font-family: Arial, sans-serif;
-    padding: 20px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto; /*배경 설정*/
+    overflow-y: scroll;
+}
+  
+.mainLogo {
+    position: absolute;
+    top: 40px;
+    left: 60px;
+  }
+
+  .searchMovie {
+    position: absolute;
+    top: 65px;
+    right: 120px;
+    display: flex;
 }
 
-.top{
-    margin-bottom: 75px;
-}
-
-.logo {
-    float: left;
-    margin-right: 20px;
-}
-
-.logo img {
-    max-width: 200px;
-}
-
-.top_component{
-    float: right;
-}
-
-.search_box{
-    float: left;
-    margin-right: 20px;
-    margin-top: 10px;
-}
-
-.search_box select{
-    height: 30px;
-    background-color: #464545; 
+.searchMovie button {
+    background-color: transparent;
     border: none;
-    border-radius: 5px;
-    color: #ffffff;
-    margin-right: 10px;
-}
-.search_box input{
-    height: 28px;
-    background-color: #464545; 
-    border: none;
-    border-radius: 5px;
-    color: #ffffff;
-    margin-right: 10px;
-}
-.search_box button{
-    height: 30px;
-    width: 50px; 
-    background-color: #222fdeb4;
-    border: none;
-    border-radius: 5px;
-    color: #ffffff;
 }
 
-.logout{
-    float: right;
-    margin-right: 20px;
-    margin-top: 10px;
+.buttonLogout {
+    position: absolute;
+    top: 13px;
+    right: 120px;
+    display: flex;
 }
 
-.logout button{
-    height: 29px;
-    width: 75px;
-    background-color: #222fdeb4; 
+.buttonLogout button {
     border: none;
-    border-radius: 5px;
-    color: #ffffff;
+    background-color: transparent;
+    font-size: 13px;
+    color: #b1adad; 
+    font-weight: bold;
 }
 
-.movie-component{
+.genreBottom h1 {
+    color: #fff; 
+    position: absolute; 
+    top: 150px;
+    left: 85px;
+}
+
+
+.genreContainer {
+    position: absolute; 
+    top: 250px;
+    left: 65px;
+    color: #b1adad;
+}
+
+.movieContainer {
+    width: 200px;
     display: inline-block;
     text-align: center;
-    padding-right: 15px;
+    margin: 17px; /* 여러 포스터 위 아래 줄 맞추기 */
+    margin-right: 40px;
+    vertical-align: top;
 }
 
-#movie-poster{
-    height: 200px;
+.moviePoster {
+    width: 210px;
+    height: 300px;
 }
 
-#movie-title{
-    width: 150px;
+.movieTitle {
+    display: block;
+    width: 200px;
+    height: 50px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: normal; /* 기본값으로 설정하여 줄 바꿈이 가능하도록 함 */
     text-align: center;
+    color: #4e4d4d;
+    font-size: 15px;
+    line-height: 1.2; /* 행 간격을 늘려 가독성을 높임 */
 }
-*/
+
+.genreBody::-webkit-scrollbar {
+	width: 15px;  /*스크롤바 너비 */
+    height: 15px;
+}
+
+/* 스크롤바 막대 꾸미기 */
+.genreBody::-webkit-scrollbar-thumb {
+	height: 30%; /*스크롤바 길이 */
+  background: #b1adad; /*스크롤바 색상*/
+  border-radius: 10px;
+}
+
+/* 스크롤바 트랙 꾸미기 */
+.genreBody::-webkit-scrollbar-track {
+	background: #212020;
+}
+
+.genreBody::-webkit-scrollbar-corner {
+	background: #212020;
+}
