--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -26,6 +26,7 @@
 }
 
 .content h1 {
+    width: 950px;
     font-size: 35px;
     font-weight: bold;
     margin-bottom: 50px; /*h2와의 간격*/
@@ -35,7 +36,7 @@
 .content h2 {
     font-size: 20px;
     color: #999;
-    margin-bottom: 130px;
+    margin-bottom: 150px;
 }
   
 .goLogin { /*위치*/
