--- a/src/Pages/MyPageEdit.module.css
+++ b/src/Pages/MyPageEdit.module.css
@@ -8,12 +8,7 @@
     width: 100vw;
     height: 100vh;
     overflow: auto; /*배경 설정*/
-}
-
-hr {
-    border: none;
-    border-top: 1px solid #4e4d4d; 
-    margin-top: 35px;
+    overflow-y: scroll;
 }
 
 .mainLogo {
@@ -59,30 +54,31 @@ hr {
 .myPageEditBottom table {
     margin:0 auto;
     border-collapse: collapse;
-    width: 500px;
+    width: 250px;
     height: 300px;
     justify-content: center;
     margin-top: 55px;
 }
 
-.imgContainer select{
-    object-fit: cover;
-    justify-content: center;
-    align-items: center;
-    width: 120px;
-    height: 120px;
+.imgContainer img{
+    width: 80px;
+    margin: 5px;
     border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 15px;
-    position:relative;
-    z-index: 1;
+}
+
+.imgSelect select{
+    width: 80px;
+    text-align: center;
+    background-color: #464545;
+    color: #ffffff;
 }
 
 .myPageEditBottom h2{
     color: #ffffff;
+    font-size: 40px;
 }
 
-.label p{
+.label1 p{
     display: inline-block;
     width: 150px;
     background-color: #464545;
@@ -90,36 +86,80 @@ hr {
     border-radius: 5px;
     margin-right: 20px;
     text-align: center;
-    color:#ffffff;
+    color:#b1adad;
     font-weight: 600;
 }
 
-.value p{
+.value1 input{
     width: 250px;
-    text-align: center;
-    color: #ffffff;
-}
-
-.value button{
+    height: 12px;
+    padding: 10px;
     background-color: #464545;
-    color: #ffffff;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border-radius: 5px;
     border: none;
-    border-radius:15px;
-    margin-right: 10px;
+    font-size: 15px;
+    color: #ffffff;
 }
 
-.value span{
+.value2 p{
+    font-size: 18px;
     color: #ffffff;
+}
+
+.value3 select {
+    background-color: #464545;
+    width: 270px;
+    height: 33px;
+    padding: 10px;
+    background-color: #464545;
+    border-radius: 5px;
+    border: none;
+    color: #ffffff;
+}
+
+.label4 p{
+    position: absolute;
+    top: 490px;
+    display: inline-block;
+    width: 150px;
+    background-color: #464545;
+    padding: 5px; 
+    border-radius: 5px;
+    margin-right: 20px;
+    text-align: center;
+    color:#b1adad;
+    font-weight: 600;
+}
+
+
+.value4 {
+    color: #ffffff; 
+}
+
+.value4 input {
+    margin-top: 10px;
+    width: 20px; /* 원하는 크기로 조절 */
+    height: 20px;
+    margin-right: 15px;
+    border-radius: 5px; /* 모서리 둥글게 만들기 */
+    border: 2px solid #b1adad; /* 테두리 스타일 지정 */
+    appearance: none;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+
+.value4 input:checked {
+    background: #222fdeb4; /* 체크된 상태의 배경색 */
+    border: none; /* 테두리 없애기 */
 }
 
 .submitButtonContainer button{
     float: right;
     width: 75px;
     padding: 5px;
-    margin-top: 10px;
+    margin-top: 40px;
+    margin-bottom: 50px;
     background-color: #222fdeb4; 
     border: none;
     border-radius: 5px;
@@ -129,4 +169,25 @@ hr {
 
 .myPageBody h2{
     color: #ffffff;
+}
+
+.myPageEditBody::-webkit-scrollbar {
+	width: 10px;  /*스크롤바 너비 */
+    height: 10px;
+}
+
+/* 스크롤바 막대 꾸미기 */
+.myPageEditBody::-webkit-scrollbar-thumb {
+	height: 30%; /*스크롤바 길이 */
+    background: #b1adad; /*스크롤바 색상*/
+    border-radius: 10px;
+}
+
+/* 스크롤바 트랙 꾸미기 */
+.myPageEditBody::-webkit-scrollbar-track {
+	background: #212020;
+}
+
+.myPageEditBody::-webkit-scrollbar-corner {
+	background: #212020;
 }
